[package]
name = "beeswax"
version = "0.1.0"
edition = "2021"

[dependencies]
beeswax-core = { path = "../beeswax-core" }
beeswax-backend = { path = "../beeswax-backend" }
tokio = { version = "1", features = ["full"] }
axum = "0.7.6"
clap = { version = "*", features = ["derive"] }

tracing-subscriber = "*"
tracing = "*"
